# jetblack-pnl

./: DEVELOPMENT-unix.md  README.md  pnl.session.sql  pyproject.toml
scratch/: Workings.ipynb  example_sqlite3_v1.py  example_sqlite3_v1_1.py  example_sqlite3_v2.py
src/jetblack_pnl/core/: __init__.py  algorithm.py  book.py  context.py  example.py  matched_pool.py  pnl_book.py  pnl_book_store.py  pnl_strip.py  security.py  split_trade.py  trade.py  trading_pnl.py  types.py  unmatched_pool.py
src/jetblack_pnl/impl/simple/: __init__.py  book.py  matched_pool.py  pnl.py  pnl_book.py  pnl_book_store.py  security.py  trade.py  types.py  unmatched_pools.py  utils.py
src/jetblack_pnl/impl/sqlite3_v1/: __init__.py  book.py  handlers.py  market_trade.py  matched_pool.py  pnl.py  pnl_book.py  pnl_book_store.py  pools.py  security.py  tables.py  trade.py  trade_db.py  unmatched_pool.py  utils.py
src/jetblack_pnl/impl/sqlite3_v2/: __init__.py  book.py  matched_pool.py  pnl_book.py  pnl_book_store.py  security.py  tables.py  trade.py  unmatched_pools.py  utils.py
tests/core/: test_example.py  test_pnl.py
tests/impl/: test_simple.py  test_sqlite3_v2.py
