[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetblack-pnl"
version = "1.0.0"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
description = "Reference implementations for trading P&L"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "autopep8",
    "pylint",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/rob-blackbourn/jetblack-pnl"
Issues = "https://github.com/rob-blackbourn/jetblack-pnl/issues"
