[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetblack-pnl"
version = "1.0.0"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
description = "Reference implementations for trading P&L"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "autopep8",
    "pylint",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/rob-blackbourn/jetblack-pnl"
Issues = "https://github.com/rob-blackbourn/jetblack-pnl/issues"

# pytest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "function"

# mypy
[tool.mypy]
files = [ "src/jetblack_pnl", "tests", "scratch" ]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
